# Argentium

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: dataset_test.yml
include/Argentium/: Dataset.hpp
include/Argentium/DatasetModel/: MNIST.hpp
include/Argentium/Network/: Activation.hpp  BaseLayer.hpp  FullyConnected.hpp  Input.hpp  Network.hpp  Neuron.hpp  Recurrence.hpp  RecurrentNeuron.hpp  neuron.hpp
src/: CMakeLists.txt  Dataset.cpp
src/DatasetModel/: MNIST.cpp
src/Network/: FullyConnected.cpp  Network.cpp  Neuron.cpp  Recurrence.cpp  RecurrentNeuron.cpp  neuron.cpp
tests/: CMakeLists.txt  CMakeUserPresets.json
tests/activation_test/: CMakeLists.txt  main.cpp
tests/dataset_tests/: CMakeLists.txt  main.cpp
